--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #0072bb;
+    /* I changed the color to match the rest of the blue color across the site! */
     color: #ffffff;
 }
 
@@ -84,6 +85,7 @@ p {
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    /* I changed the color to match the rest of the blue color across the site! */
     background-color: #0072bb;
 }
 
@@ -158,6 +160,7 @@ p {
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    /* I changed the color to match the rest of the blue color across the site! */
     background-color: #0072bb;
     color: #ffffff;
 }
@@ -199,3 +202,4 @@ footer {
 footer h2 {
     font-size: 20px;
 }
+/* I was able to fix up the site and make changes to the fonts and different attributes. I also was able to fix the coloring and position of the boxes. */
